--- a/iBudget/Views/Customers/Map.cshtml
+++ b/iBudget/Views/Customers/Map.cshtml
@@ -1,9 +1,9 @@
-﻿@model iBudget.Models.FinancialAnalyst
+﻿@*@model iBudget.Models.FinancialAnalyst
 @{
     ViewData["Title"] = "Map";
-}
-<h2>Map</h2>
-<!DOCTYPE html>
+}*@
+@*<h2>Map</h2>*@
+@*<!DOCTYPE html>
 <html>
 <head>
     <title>Simple Map</title>
@@ -33,7 +33,7 @@
                 map = new google.maps.Map(document.getElementById('map'), mapOptions);
                 console.log('TEST');
                 var streetName = "@ViewBag.CustomerAddress";
-                var zip = "@ViewBag.CustomerZip";
+                var zip = "@ViewBag.CityStateZip";
                 var address = (streetName + " " + zip + " ");
 
 
@@ -53,40 +53,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=@($"{Key.key}")&callback=initMap"
             async defer></script>
 </body>
-</html>
+</html>*@
 
-@*<!DOCTYPE html>
-    <html>
-    <head>
-        <title>Simple Map</title>
-        <meta name="viewport" content="initial-scale=1.0">
-        <meta charset="utf-8">
-        <style>
-             /* Always set the map height explicitly to define the size of the div
-            * element that contains the map. */
-             #map {
-                 height: 100%;
-             }
-             /* Optional: Makes the sample page fill the window. */
-             html, body {
-                 height: 100%;
-                 margin: 0;
-                 padding: 0;
-             }
-        </style>
-    </head>
-    <body>
-        <div id="map"></div>
-        <script>
-            var map;
-            function initMap() {
-                map = new google.maps.Map(document.getElementById('map'), {
-                    center: { lat: -34.397, lng: 150.644 },
-                    zoom: 8
-                });
-            }
-        </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=@($"{Key.key}")&callback=initMap"
-                async defer></script>
-    </body>
-    </html>*@
+<iframe src="https://www.google.com/maps/d/embed?mid=1MEWElNIiBGuKMFv4nRwUroNK2KDdALmk&hl=en" width="640" height="480"></iframe>
