--- a/iBudget/Views/Shared/_CustomerLayout.cshtml
+++ b/iBudget/Views/Shared/_CustomerLayout.cshtml
@@ -32,10 +32,11 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Customers" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Budgets" asp-action="Create">Budget</a></li>
-                    <li><a asp-area="" asp-controller="Calendar" asp-action="Index">Calendar for Finances</a></li>
-                    <li><a asp-area="" asp-controller="Customers" asp-action="Map">Banks By You</a></li>
-                    <li><a asp-area="" asp-controller="Customers" asp-action="FinancialAnalystIndex">View Financial Analysts</a></li>
+                    <li><a asp-area="" asp-controller="Calendar" asp-action="Index">Calendar</a></li>
+                    <li><a asp-area="" asp-controller="Customers" asp-action="Map">Map</a></li>
+                    <li><a asp-area="" asp-controller="Customers" asp-action="FinancialAnalystIndex">Financial Analysts</a></li>
                     <li><a asp-area="" asp-controller="Chat" asp-action="Index">Contact a Financial Analyst</a></li>
+                    <li><a asp-area="" asp-controller="Customers" asp-action="Stock">Stock</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
